<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/another_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/Hamming"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <TableLayout
        android:layout_width="0px"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@android:color/holo_red_light">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ff4f61"
            android:drawableTop="@drawable/ic_encode"
            android:fontFamily="@font/poppins"
            android:onClick="goToEncodeActivity"
            android:padding="32dp"
            android:text="@string/firstButtonString"
            android:textColor="@color/colorAccent"
            android:textSize="48sp" />

    </TableLayout>

    <TableLayout
        android:layout_width="0px"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@android:color/holo_blue_light">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#70cf98"
            android:drawableTop="@drawable/ic_info"
            android:fontFamily="@font/poppins"
            android:onClick="goToInformationActivity"
            android:padding="32dp"
            android:text="@string/secondButtonString"
            android:textColor="@color/colorAccent"
            android:textSize="48sp" />

    </TableLayout>

    <TableLayout
        android:layout_width="0px"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@android:color/holo_green_light">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f1c84d"
            android:drawableTop="@drawable/ic_credits"
            android:fontFamily="@font/poppins"
            android:onClick="goToCreditsActivity"
            android:padding="32dp"
            android:text="@string/thirdButtonString"
            android:textColor="@color/colorAccent"
            android:textSize="48sp" />

    </TableLayout>

</TableLayout>